--- a/style.html
+++ b/style.html
@@ -295,425 +295,25 @@
 <div class="tabs__panel">
 	<ul class="tabs__nav    ">
 		<li class="tabs__item     active">
-			<a class="tabs__link    " href="#price-card1" data-toggle="tab">Ремонт пластиковых окон</a>
+			<a class="tabs__link    " href="#tabs-card1" data-toggle="tab">Вкладка 1</a>
 		</li>
 		<li class="tabs__item    ">
-			<a class="tabs__link    " href="#price-card2" data-toggle="tab">Ремонт алюминиевых окон</a>
+			<a class="tabs__link    " href="#tabs-card2" data-toggle="tab">Вкладка 2</a>
 		</li>
 		<li class="tabs__item    ">
-			<a class="tabs__link    " href="#price-card3" data-toggle="tab">Ремонт деревянных окон</a>
+			<a class="tabs__link    " href="#tabs-card3" data-toggle="tab">Вкладка 3</a>
 		</li>
 	</ul>
-
 </div>
-<div class="tabs__pane  active" id="price-card1">
-	<div class="table-responsive">
-		<table class="table  table-bordered">
-			<thead>
-				<tr>
-					<th>Название услуги</th>
-					<th>Единица</th>
-					<th class="is--right">Стоимость</th>
-				</tr>
-			</thead>
-			<tbody> 
-				<tr> 
-					<th colspan="3"> Основные работы</th>
-				</tr>
-				<tr> 
-					<td>Регулировка и&nbsp;смазка фурнитуры створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">350 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Регулировка и&nbsp;смазка фурнитуры двери</td>
-					<td>1ед.</td>
-					<td class="is--right">500 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Восстановление геометрии створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">500 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Восстановление геометрии двери</td>
-					<td>1ед.</td>
-					<td class="is--right">750 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Замена уплотнителя ПВХ (Россия)</td>
-					<td>1ед.</td>
-					<td class="is--right">90 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Замена уплотнителя ПВХ (Германия)</td>
-					<td>1ед.</td>
-					<td class="is--right">120 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Замена стеклопакета</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;3000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Замена ручки</td>
-					<td>1ед.</td>
-					<td class="is--right">400 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Герметизация наружных и&nbsp;внутренних швов</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;1000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Установка москитной сетки (с&nbsp;сеткой)</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;1200 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Установка защелки на&nbsp;балконную дверь1ед.</td>
-					<td>1ед.</td>
-					<td class="is--right">600 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Замена пластиковых откосов (с&nbsp;материалом)</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;600 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Замена отливов</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;300 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Установки ответной планки</td>
-					<td>1ед.</td>
-					<td class="is--right">350 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Установка гребенки</td>
-					<td>1ед.</td>
-					<td class="is--right">250 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Утепление водоотлива</td>
-					<td>1ед.</td>
-					<td class="is--right">250 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотного механизма створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;2000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотно-откидного механизма створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;3000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотного механизма двери</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;4000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотно-откидного механизма двери</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;5000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена подоконника</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;450 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<th colspan="3"> Дополнительные работы</th>
-				</tr>
-				<tr> 
-					<td>Замена фурнитуры</td>
-					<td>компл.</td>
-					<td class="is--right">от&nbsp;4000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Установка доводчика на&nbsp;входную дверь</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;3000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Установка створки (вместо стеклопакета)</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;5000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Перемонтаж окна</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;1800 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Герметизация внешнего шва</td>
-					<td>1м&nbsp;пог.</td>
-					<td class="is--right">от&nbsp;500 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена стеклопакета</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;4000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>	
+<div class="tabs__pane  active" id="tabs-card1">
+	Вкладка 1
 </div>
-<div class="tabs__pane" id="price-card2">
-	<div class="table-responsive">
-		<table class="table  table-bordered">
-			<thead>
-				<tr>
-					<th>Название услуги</th>
-					<th>Единица</th>
-					<th class="is--right">Стоимость</th>
-				</tr>
-			</thead>
-			<tbody> 
-				<tr> 
-					<th colspan="3">Основные работы</th>
-				</tr>
-				<tr> 
-					<td>Регулировка и&nbsp;смазка фурнитуры створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">500 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Регулировка и&nbsp;смазка фурнитуры двери</td>
-					<td>1ед.</td>
-					<td class="is--right">750 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Восстановление геометрии створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">700 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Восстановление геометрии двери</td>
-					<td>1ед.</td>
-					<td class="is--right">1200 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена уплотнителя</td>
-					<td>1ед.</td>
-					<td class="is--right">200 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена стеклопакета</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;4000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена ручки</td>
-					<td>1ед.</td>
-					<td class="is--right">1500 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Герметизация наружных и&nbsp;внутренних швов</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;1000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Установка москитной сетки (с&nbsp;сеткой)</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;1200 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Установка защелки на&nbsp;балконную дверь1ед.</td>
-					<td>1ед.</td>
-					<td class="is--right">600 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена пластиковых откосов (с&nbsp;материалом)</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;600 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена отливов</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;300 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Установки ответной планки</td>
-					<td>1ед.</td>
-					<td class="is--right">500 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Утепление водоотлива</td>
-					<td>1ед.</td>
-					<td class="is--right">250 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотного механизма створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;3000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотно-откидного механизма створки окна</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;6000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотного механизма двери</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;6000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена поворотно-откидного механизма двери</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;7000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Замена подоконника</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;450 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<th colspan="3">Дополнительные работы</th>
-				</tr>
-				<tr> 
-					<td>Замена фурнитуры</td>
-					<td>компл.</td>
-					<td class="is--right">от&nbsp;4000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Установка доводчика на&nbsp;входную дверь</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;3000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Установка створки (вместо стеклопакета)</td>
-					<td>1ед.</td>
-					<td class="is--right">от&nbsp;5000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Перемонтаж окна</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;1800 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td>Герметизация внешнего шва</td>
-					<td>1м&nbsp;пог.</td>
-					<td class="is--right">от&nbsp;500 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-				<tr> 
-					<td> Замена стеклопакета</td>
-					<td>1м²</td>
-					<td class="is--right">от&nbsp;4000 <span class="ruble__symbol  is--xs"><svg class="icon-svg icon-ruble" role="img">
-	<use xlink:href="/img/svg/sprite.svg#ruble"></use>
-</svg></span></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+<div class="tabs__pane" id="tabs-card2">
+	Вкладка 2
 </div>
-<div class="tabs__pane" id="price-card3">Вкладка 3</div>
-
+<div class="tabs__pane" id="tabs-card3">
+	Вкладка 3
+</div>
 		</div>
 		<div class="content-block__elem    ">
 			<h4 class="content-block__heading">Формы</h4>
